@@ -4,6 +4,7 @@ Kiwix 0.8 rc2
 * Fixed toolbar icons with RTL languages
 * Improved toolbar UI (added icons & tooltip)
 * Fixed window size/position restore
+* Fixed address-bar not displaying TOC URLs (ID: 2806208)
  
 Kiwix 0.8 rc1
 * High reducing of the xapian index disk usage
